--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "lesichkovm/laravel-advanced-route",
+    "name": "mertyildiran/laravel-advanced-route",
     "description": "Advanced route class for Laravel - restoring implicit controllers to the framework.",
     "type": "library",
-    "keywords": ["route", "advanced", "laravel", "php", "lesichkov"],    
+    "keywords": ["route", "advanced", "laravel", "php", "lesichkov"],
     "homepage": "http://github.com/lesichkovm/laravel-advanced-route",
     "license": "proprietary",
     "authors": [
@@ -11,6 +11,11 @@
             "email": "lesichkovm@gmail.com",
             "homepage": "http://lesichkov.co.uk",
             "role": "Lead Developer"
+        },
+        {
+            "name": "Mehmet Mert Yildiran",
+            "email": "memhetmertyildiran@gmail.com",
+            "role": "Maintainer"
         }
     ],
     "autoload": {
