--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         },
         {
             "name": "Mehmet Mert Yildiran",
-            "email": "memhetmertyildiran@gmail.com",
+            "email": "mehmetmertyildiran@gmail.com",
             "role": "Maintainer"
         }
     ],
