--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "files": ["src/AdvancedRoute.php"]
     },
      "require": {
-        "laravel/framework": "5.* || 6.* || ~7.0"
+        "laravel/framework": "5.* || 6.* || ~7.0 || ~8.0"
     }
 }
